[package]
name = "web-scraper"
version = "0.1.0"
authors = ["Imo-Br"]
edition = "2021"
description = "A rust crate, that is used to get html from a website, and scrape the content in it"
repository = "https://github.com/Imo-Br/web-scraper"
license = "BSL-1.0"
readme = "README.md"

[dependencies]
regex = "1.10.4"
reqwest = "0.12.4"

